frontend fixed z-index logo

--- a/public_html/template/src/scss/main.scss
+++ b/public_html/template/src/scss/main.scss
@@ -280,7 +280,7 @@ body {
     //top: 8%;
     top: 52px;
     bottom: 0;
-    z-index: 9002;
+    z-index: 9000;
     overflow: hidden;
 
   }
